sim_seq/testcase/107/make_output.log
verilator -cc --exe -x-assign fast -Wall --assert --coverage-line -Wno-WIDTHEXPAND -Wno-BLKSEQ -Wno-VARHIDDEN -Wno-WIDTHTRUNC -Wno-UNUSEDSIGNAL -f input.vc top_module.v sim-main.cpp rfuzz-harness.cpp
- V e r i l a t i o n   R e p o r t: Verilator 5.032 2025-01-01 rev UNKNOWN.REV
- Verilator: Built from 0.000 MB sources in 0 modules, into 0.000 MB in 0 C++ files needing 0.000 MB
- Verilator: Walltime 0.001 s (elab=0.000, cvt=0.000, bld=0.000); cpu 0.001 s on 1 threads
cd obj_dir && make -f Vtop_module.mk
c++  -I.  -MMD -I/opt/homebrew/Cellar/verilator/5.032/share/verilator/include -I/opt/homebrew/Cellar/verilator/5.032/share/verilator/include/vltstd -DVM_COVERAGE=1 -DVM_SC=0 -DVM_TIMING=0 -DVM_TRACE=0 -DVM_TRACE_FST=0 -DVM_TRACE_VCD=0 -faligned-new -fbracket-depth=4096 -fcf-protection=none -Qunused-arguments -Wno-bool-operation -Wno-c++11-narrowing -Wno-constant-logical-operand -Wno-non-pod-varargs -Wno-parentheses-equality -Wno-shadow -Wno-sign-compare -Wno-tautological-bitwise-compare -Wno-tautological-compare -Wno-uninitialized -Wno-unused-but-set-parameter -Wno-unused-but-set-variable -Wno-unused-parameter -Wno-unused-variable     -std=gnu++17 -Os  -c -o rfuzz-harness.o ../rfuzz-harness.cpp
../rfuzz-harness.cpp:24:9: error: use of undeclared identifier 'data_wide'
   24 |         data_wide[0] = 0xaaaaaaaa;
      |         ^
../rfuzz-harness.cpp:25:21: error: use of undeclared identifier 'data_wide'
   25 |         top->data = data_wide;
      |                     ^
../rfuzz-harness.cpp:26:9: error: use of undeclared identifier 'data_wide'
   26 |         data_wide[1] = 0xaaaaaaaa;
      |         ^
../rfuzz-harness.cpp:27:21: error: use of undeclared identifier 'data_wide'
   27 |         top->data = data_wide;
      |                     ^
../rfuzz-harness.cpp:28:9: error: use of undeclared identifier 'data_wide'
   28 |         data_wide[2] = 0xaaaaaaaa;
      |         ^
../rfuzz-harness.cpp:29:21: error: use of undeclared identifier 'data_wide'
   29 |         top->data = data_wide;
      |                     ^
../rfuzz-harness.cpp:30:9: error: use of undeclared identifier 'data_wide'
   30 |         data_wide[3] = 0xaaaaaaaa;
      |         ^
../rfuzz-harness.cpp:31:21: error: use of undeclared identifier 'data_wide'
   31 |         top->data = data_wide;
      |                     ^
../rfuzz-harness.cpp:32:9: error: use of undeclared identifier 'data_wide'
   32 |         data_wide[4] = 0xaaaaaaaa;
      |         ^
../rfuzz-harness.cpp:33:21: error: use of undeclared identifier 'data_wide'
   33 |         top->data = data_wide;
      |                     ^
../rfuzz-harness.cpp:34:9: error: use of undeclared identifier 'data_wide'
   34 |         data_wide[5] = 0xaaaaaaaa;
      |         ^
../rfuzz-harness.cpp:35:21: error: use of undeclared identifier 'data_wide'
   35 |         top->data = data_wide;
      |                     ^
../rfuzz-harness.cpp:36:9: error: use of undeclared identifier 'data_wide'
   36 |         data_wide[6] = 0xaaaaaaaa;
      |         ^
../rfuzz-harness.cpp:37:21: error: use of undeclared identifier 'data_wide'
   37 |         top->data = data_wide;
      |                     ^
../rfuzz-harness.cpp:38:9: error: use of undeclared identifier 'data_wide'
   38 |         data_wide[7] = 0xaaaaaaaa;
      |         ^
../rfuzz-harness.cpp:39:21: error: use of undeclared identifier 'data_wide'
   39 |         top->data = data_wide;
      |                     ^
../rfuzz-harness.cpp:40:9: error: use of undeclared identifier 'data_wide'
   40 |         data_wide[8] = 0xaaaaaaaa;
      |         ^
../rfuzz-harness.cpp:41:21: error: use of undeclared identifier 'data_wide'
   41 |         top->data = data_wide;
      |                     ^
../rfuzz-harness.cpp:42:9: error: use of undeclared identifier 'data_wide'
   42 |         data_wide[9] = 0xaaaaaaaa;
      |         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make[1]: *** [rfuzz-harness.o] Error 1
make: *** [run] Error 2
